; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_init.c_lpfc_stop_vport_timers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_init.c_lpfc_stop_vport_timers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_vport = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lpfc_stop_vport_timers(%struct.lpfc_vport* %0) #0 {
  %2 = alloca %struct.lpfc_vport*, align 8
  store %struct.lpfc_vport* %0, %struct.lpfc_vport** %2, align 8
  %3 = load %struct.lpfc_vport*, %struct.lpfc_vport** %2, align 8
  %4 = getelementptr inbounds %struct.lpfc_vport, %struct.lpfc_vport* %3, i32 0, i32 2
  %5 = call i32 @del_timer_sync(i32* %4)
  %6 = load %struct.lpfc_vport*, %struct.lpfc_vport** %2, align 8
  %7 = getelementptr inbounds %struct.lpfc_vport, %struct.lpfc_vport* %6, i32 0, i32 1
  %8 = call i32 @del_timer_sync(i32* %7)
  %9 = load %struct.lpfc_vport*, %struct.lpfc_vport** %2, align 8
  %10 = getelementptr inbounds %struct.lpfc_vport, %struct.lpfc_vport* %9, i32 0, i32 0
  %11 = call i32 @del_timer_sync(i32* %10)
  %12 = load %struct.lpfc_vport*, %struct.lpfc_vport** %2, align 8
  %13 = call i32 @lpfc_can_disctmo(%struct.lpfc_vport* %12)
  ret void
}

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @lpfc_can_disctmo(%struct.lpfc_vport*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
